prevent ads overflowing

--- a/src/components/Home/styles/Home.scss
+++ b/src/components/Home/styles/Home.scss
@@ -41,6 +41,7 @@
             max-width: 100%;
             height: 7rem;
             margin: 2rem auto;
+            overflow: hidden;
         }
     }
 
